# HalideAndroidCamera2Example

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/halideandroidcamera2gl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidBufferUtilities.cpp  AndroidBufferUtilities.h  HalideFilters.cpp
app/src/main/cpp/hl-pipelines/: .gitignore  CMakeLists.txt
app/src/main/java/com/example/halideandroidcamera2gl/: AndroidBufferUtilities.java  AutoFitSurfaceView.java  Camera2BasicFragment.java  CameraActivity.java  HalideFilters.java  HalideYuvBufferT.java  NativeSurfaceHandle.java  PermissionConfirmationDialog.java
app/src/main/res/layout/: activity_camera.xml  fragment_camera2_basic.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/halideandroidcamera2gl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
